--- a/WCFRepositorySoapService/WCFRepositorySoapService.csproj
+++ b/WCFRepositorySoapService/WCFRepositorySoapService.csproj
@@ -75,6 +75,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\WCFRepositorySoapService - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
