Now using Azure service instead of local service

--- a/WPFClient/App.config
+++ b/WPFClient/App.config
@@ -7,12 +7,24 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IService1" />
+                <binding name="BasicHttpBinding_IService11" />
+                <binding name="BasicHttpsBinding_IService1">
+                    <security mode="Transport" />
+                </binding>
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:48537/Service1.svc" binding="basicHttpBinding"
                 bindingConfiguration="BasicHttpBinding_IService1" contract="WCFRepositorySoapServiceReference.IService1"
                 name="BasicHttpBinding_IService1" />
+            <endpoint address="http://wcfrepositorysoapservice.azurewebsites.net/Service1.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService11"
+                contract="WCFRepositorySoapServiceReferenceAzure.IService1"
+                name="BasicHttpBinding_IService11" />
+            <endpoint address="https://wcfrepositorysoapservice.azurewebsites.net/Service1.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IService1"
+                contract="WCFRepositorySoapServiceReferenceAzure.IService1"
+                name="BasicHttpsBinding_IService1" />
         </client>
     </system.serviceModel>
 </configuration>
